--- a/KaraokePayment/KaraokePayment/Views/Home/Index.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
             <h1>Chào mừng @name đến vơi hệ thống quản lý karaoke</h1>
             <div class="row" style="margin-top: 30px;">
                 <div class="col-md-2">
-                    <a href="thanh-toan-karaoke.html">
-                        <button type="button" class="btn btn-block btn-primary btn-md">Thanh Toán Phòng</button>
+                    <a asp-controller="ThanhToanKaraoke" asp-action="ThanhToanPhongKaraoke" class="btn btn-block btn-primary btn-md">
+                        Thanh Toán Phòng
                     </a>
                 </div>
             </div>
