--- a/KaraokePayment/KaraokePayment/Views/Phongs/GetPhongDaBook.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/Phongs/GetPhongDaBook.cshtml
@@ -14,7 +14,7 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">Danh Sách Phòng Chưa Thanh Toan</h3>
+                            <h3 class="card-title">Danh Sách Phòng Chưa Thanh Toán</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
@@ -22,19 +22,19 @@
                                 <thead>
                                     <tr>
                                         <th>
-                                            Ten Phong
+                                            Tên Phòng
                                         </th>
                                         <th>
-                                            Co Phong
+                                            Cỡ Phòng
                                         </th>
                                         <th>
-                                            IsVIP
+                                            Vip
                                         </th>
                                         <th>
-                                            Gia
+                                            Giá
                                         </th>
                                         <th>
-                                            Trang Thai
+                                            Trạng Thái
                                         </th>
                                         <th></th>
                                     </tr>
