--- a/KaraokePayment/KaraokePayment/Areas/Identity/Pages/Account/Login.cshtml
+++ b/KaraokePayment/KaraokePayment/Areas/Identity/Pages/Account/Login.cshtml
@@ -27,54 +27,32 @@
         <!-- /.login-logo -->
         <div class="card card-outline card-primary">
             <div class="card-header text-center">
-                <a href="#" class="h1"><b>Admin </b>Karaoke</a>
+                <a href="#" class="h1"><b>Admin </b>Login</a>
             </div>
-            <div class="card-body">
-                <p class="login-box-msg">Nhan vien admin dang nhap</p>
-
-                <form id="account" method="post">
+            <div class="card-body">                
+                <form id="account" method="post">                    
                     <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="input-group mb-3">
-                        <input asp-for="Input.Email" class="form-control" placeholder="Email" type="email" />
+                    <div class="form-group">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-envelope"></span>
-                            </div>
-                        </div>
                     </div>
-                    <div class="input-group mb-3">
-                        <input asp-for="Input.Password" type="password" class="form-control" placeholder="Password" />
+                    <div class="form-group">
+                        <label asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
-                        </div>
+                    </div>                    
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary">Log in</button>
                     </div>
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="icheck-primary">
-                                <input asp-for="Input.RememberMe" />
-                                <label for="remember">
-                                    @Html.DisplayNameFor(m => m.Input.RememberMe)
-                                </label>
-                            </div>
-                        </div>
-                        <!-- /.col -->
-                        <!-- /.col -->
+                    <div class="form-group">                        
+                        <p class="mb-0">
+                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="text-center">Register a new admin account</a>
+                        </p>
                     </div>
-                </form>
-
-                <div class="social-auth-links text-center mt-2 mb-3">
-                    <button type="submit" class="btn btn-block btn-primary">
-                        <i class="mr-2"></i>Log in
-                    </button>
-                </div>
+                </form>             
                 <!-- /.social-auth-links -->
-                <p class="mb-0">
-                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl" class="text-center">Register a new admin account</a>
-                </p>
+                
             </div>
             <!-- /.card-body -->
         </div>
