--- a/KaraokePayment/KaraokePayment/Views/BookPhongOrderPhongs/Create.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/BookPhongOrderPhongs/Create.cshtml
@@ -41,12 +41,12 @@
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="ThoiGianBatDau" class="control-label"></label>
-                                            <input asp-for="ThoiGianBatDau" class="form-control" />
+                                            <input asp-for="ThoiGianBatDau" class="form-control"/>
                                             <span asp-validation-for="ThoiGianBatDau" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="ThoiGianKetThuc" class="control-label"></label>
-                                            <input asp-for="ThoiGianKetThuc" class="form-control" />
+                                            <input asp-for="ThoiGianKetThuc" class="form-control"/>
                                             <span asp-validation-for="ThoiGianKetThuc" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
@@ -56,7 +56,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="TrangThai" class="control-label"></label>
-                                            <input asp-for="TrangThai" class="form-control" />
+                                            <select asp-for="TrangThai" class="form-control" asp-items="Html.GetEnumSelectList<KaraokePayment.Enums.BookPhongOrderPhongStatus>()"></select>
                                             <span asp-validation-for="TrangThai" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
@@ -66,12 +66,12 @@
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="NgaySua" class="control-label"></label>
-                                            <input asp-for="NgaySua" class="form-control" />
+                                            <input asp-for="NgaySua" class="form-control"/>
                                             <span asp-validation-for="NgaySua" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="TongTien" class="control-label"></label>
-                                            <input asp-for="TongTien" class="form-control" />
+                                            <input asp-for="TongTien" value="0" class="form-control" />
                                             <span asp-validation-for="TongTien" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
