--- a/KaraokePayment/KaraokePayment/Views/BookPhongOrders/Create.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/BookPhongOrders/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model KaraokePayment.Data.Entity.BookPhongOrder
+﻿@using KaraokePayment.Enums
+@model KaraokePayment.Data.Entity.BookPhongOrder
 
 @{
     ViewData["Title"] = "Create";
@@ -30,13 +31,12 @@
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                         <div class="form-group">
                                             <label asp-for="TongTT" class="control-label"></label>
-                                            <input asp-for="TongTT" class="form-control" />
+                                            <input asp-for="TongTT" value="0" class="form-control" />
                                             <span asp-validation-for="TongTT" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="TrangThai" class="control-label"></label>
-                                            <input asp-for="TrangThai" class="form-control" />
-                                            <span asp-validation-for="TrangThai" class="text-danger"></span>
+                                            <select asp-for="TrangThai" class="form-control" asp-items="Html.GetEnumSelectList<BookPhongOrderStatus>()"></select>                                            
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="KhachHangId" class="control-label"></label>
