--- a/KaraokePayment/KaraokePayment/Views/BookPhongOrders/Edit.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/BookPhongOrders/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model KaraokePayment.Data.Entity.BookPhongOrder
-
+@using KaraokePayment.Enums
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -36,7 +36,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="TrangThai" class="control-label"></label>
-                                            <input asp-for="TrangThai" class="form-control" />
+                                            <select asp-for="TrangThai" class="form-control" asp-items="Html.GetEnumSelectList<BookPhongOrderStatus>()"></select>
                                             <span asp-validation-for="TrangThai" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
