--- a/KaraokePayment/KaraokePayment/Views/Phongs/Create.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/Phongs/Create.cshtml
@@ -52,7 +52,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="TrangThai" class="control-label"></label>
-                                            <input asp-for="TrangThai" class="form-control" />
+                                            <select asp-for="TrangThai" class="form-control" asp-items="Html.GetEnumSelectList<KaraokePayment.Enums.PhongStatus>()"></select>
                                             <span asp-validation-for="TrangThai" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
